version 0.6.2 - xx-Dec-2008
 . Actions: Accelerate & Speed can ratios can be modified at runtime (issue #127)
 . CocosNode: added absolutePosition (issue #9 & issue #122)
 . Demos: shows how to set multiple Touches and other options (issue #116)
 . Demos: fixed type (issue #111)
 . Director: Touches work fast again (issue #126)
 . License: removed "GNU LGPL" from sources files (issue #115)
 . License: fixed grammar errors (issue #120)
 . TextureMgr: Avois duplicate cache (issue #121)
 
version 0.6.1 - 08-Dec-2008
 . Documentation: Generation of doc fixes (issue #105)
 . Primitives: drawLine prototype fixed (issue #103)
 . XCode: all projects have "thumb compilation" turned off (issue #104)
 
version 0.6.0 - 05-Dec-2008
 . Actions: Sequences of Repeats fixes (issue #80)
 . Actions: Added RepeatForEver. Added example in SpritesDemo example (issue #93)
 . Actions: Repeat can be reversed (issue #92)
 . Actions: Memory leaks detected by static analyzer. (issue #90)
 . CocosNode: added support for Parallax scroller. Created ParallaxDemo example (issue #89)
 . CocosNode: removed deprecated 'named' methods (issue #91)
 . CocosNode: lazy allocations with timers, children & actions (issue #94)
 . CocosNode: added removeAndStop, removeAndStopByTag and removeAndStopAll (issue #101)
 . Demos: fixed memory leaks in AnchorDemo, SpritesDemo and RotateWorld (related to issue #90)
 . Director: propagation of Touch events can be stopped (issue #96)
 . Documentation: properties are documented (issue #100)
 . Menu: conforms to CocosNodeSize protocol (issue #99)
 . Menu: support both vertical & horizontal alignment (issue #97)
 . Menu: added MenuItemToggle (issue #83)
 . Particle: Added ParticleSnow (issue #102)
 . Texture2D: creates the textures with clamp to edge and mag filter to linear (issue #95)

version 0.5.3 - 18-Nov-2008
 . Actions: Repeat fixes (issue #81)
 . CocosNode: added numberOfRunningActions (issue #72)
 . CocosNode: removeAll fixes (issue #74)